--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>タクシーどうだった？</title>
+        <title>タクシー評価結果</title>
         <link rel='stylesheet' href='/stylesheets/style.css' />
         <link rel='stylesheet' href='/stylesheets/jquery.mobile-1.3.2.min.css' />
         <script src="/javascripts/jquery-1.10.2.min.js"></script>
@@ -12,13 +12,10 @@
     <body>
         <div data-role="page">
             <div data-role="header">
-                <h1>タクシーどうだった？</h1>
+                <h1>結果</h1>
             </div>
             <div data-role="content">
-                <ul>
-                    <li><a href="/taxi/add" data-transition="slide">評価する</a></li>
-                    <li><a href="/taxi" data-transition="slide">見る</a></li>
-                </ul>
+
             </div>
             <div data-role="footer">
                 <h4>フッター</h4>
