評価登録時に位置情報も登録

--- a/views/taxis/add.ejs
+++ b/views/taxis/add.ejs
@@ -11,11 +11,22 @@
     </head>
     <body>
         <div data-role="page">
-            <div data-role="header">
+            <div data-role="header" data-position="fixed">
                 <h1>タクシーどうだった？</h1>
             </div>
             <div data-role="content">
-                <form action="/taxi" method="POST">
+                <script>
+                  function setGeoLocation() {
+                    navigator.geolocation.getCurrentPosition(function(position) {
+                      $('input:hidden[name="latitude"]').val(position.coords.latitude);
+                      $('input:hidden[name="longitude"]').val(position.coords.longitude);
+                    });
+                  }
+                </script>
+
+                <form action="/taxi" method="POST" onsubmit="setGeoLocation();">
+                    <input type="hidden" name="latitude" />
+                    <input type="hidden" name="longitude" />
                     <legend>
                         タクシーの色：
                     </legend>
@@ -45,7 +56,7 @@
                     <input type="submit" value="評価する" />
                 </form>
             </div>
-            <div data-role="footer">
+            <div data-role="footer" data-position="fixed">
                 <h4>フッター</h4>
             </div>
         </div>
