ヘッダとフッタを固定

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div data-role="page">
-            <div data-role="header">
+            <div data-role="header" data-position="fixed">
                 <h1>タクシーどうだった？</h1>
             </div>
             <div data-role="content">
@@ -20,7 +20,7 @@
                     <li><a href="/taxi" data-transition="slide">見る</a></li>
                 </ul>
             </div>
-            <div data-role="footer">
+            <div data-role="footer" data-position="fixed">
                 <h4>フッター</h4>
             </div>
         </div>
