--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div data-role="page">
-            <div data-role="header">
+            <div data-role="header" data-position="fixed">
                 <h1>結果</h1>
             </div>
             <div data-role="content">
@@ -19,7 +19,7 @@
                     <li>色：<%= doc.color %>,タイプ：<%= doc.companyType %>評価：<%= doc.rating %></li>
                 <%}) %>
             </div>
-            <div data-role="footer">
+            <div data-role="footer" data-position="fixed">
                 <h4>フッター</h4>
             </div>
         </div>
