戻るボタンをヘッダに追加

--- a/views/taxis/add.ejs
+++ b/views/taxis/add.ejs
@@ -31,7 +31,7 @@
                   }
                 </script>
 
-                <form action="/taxi" method="POST" onsubmit="setGeoLocation();">
+                <form action="/taxi" method="POST">
                     <input type="hidden" name="latitude" />
                     <input type="hidden" name="longitude" />
                     <legend>
@@ -64,7 +64,7 @@
                 </form>
             </div>
             <div data-role="footer" data-position="fixed">
-                <h4>フッター</h4>
+                <a href="/" data-role="button">戻る</a>
             </div>
         </div>
     </body>
