--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -20,7 +20,7 @@
                 <%}) %>
             </div>
             <div data-role="footer" data-position="fixed">
-                <h4>フッター</h4>
+                <a href="/" data-back>戻る</a>
             </div>
         </div>
     </body>
