--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
         <script src="/javascripts/jquery.mobile-1.3.2.min.js"></script>
     </head>
     <body>
-        <div data-role="page">
+        <div data-role="page" data-url="/">
             <div data-role="header" data-position="fixed">
                 <h1>タクシーどうだった？</h1>
             </div>
