--- a/views/geoLocation/index.ejs
+++ b/views/geoLocation/index.ejs
@@ -1,84 +1,135 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>現在位置の表示</title>
-        <link rel='stylesheet' href='/stylesheets/style.css' />
-        <link rel='stylesheet' href='/stylesheets/jquery.mobile-1.3.2.min.css' />
-        <script src="/javascripts/jquery-1.10.2.min.js"></script>
-        <script src="/javascripts/jquery.mobile-1.3.2.min.js"></script>
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-        <script>
-        //ユーザーの現在の位置情報を取得
-        navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
-        
-        /***** ユーザーの現在の位置情報を取得 *****/
-        function successCallback(position) {
-          var gl_text = "緯度：" + position.coords.latitude + "<br>";
-            gl_text += "経度：" + position.coords.longitude + "<br>";
-            gl_text += "高度：" + position.coords.altitude + "<br>";
-            gl_text += "緯度・経度の誤差：" + position.coords.accuracy + "<br>";
-            gl_text += "高度の誤差：" + position.coords.altitudeAccuracy + "<br>";
-            gl_text += "方角：" + position.coords.heading + "<br>";
-            gl_text += "速度：" + position.coords.speed + "<br>";
-          document.getElementById("show_result").innerHTML = gl_text;
-          
-          var latlng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-          var options = {
-                      zoom: 15,
-                      center: latlng,
-                      mapTypeId: google.maps.MapTypeId.ROADMAP
-                  };
-          var map = new google.maps.Map(document.getElementById('map'), options);
-          var marker = new google.maps.Marker({
-                      position: latlng,
-                      map: map,
-                      title: '現在地'
-          });
-        }
-        
-        /***** 位置情報が取得できない場合 *****/
-        function errorCallback(error) {
-          var err_msg = "";
-          switch(error.code)
-          {
-            case 1:
-              err_msg = "位置情報の利用が許可されていません";
-              break;
-            case 2:
-              err_msg = "デバイスの位置が判定できません";
-              break;
-            case 3:
-              err_msg = "タイムアウトしました";
-              break;
-          }
-          document.getElementById("show_result").innerHTML = err_msg;
-          //デバッグ用→　document.getElementById("show_result").innerHTML = error.message;
-        }
-        </script>
-        <style>
-      #map {
-        width: 400px;
-        height: 300px;
-        border: solid 1px #ccc;
-      }
-    </style>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>現在位置の表示</title>
+<link rel='stylesheet' href='/stylesheets/style.css' />
+<link rel='stylesheet' href='/stylesheets/jquery.mobile-1.3.2.min.css' />
+<script src="/javascripts/jquery-1.10.2.min.js"></script>
+<script src="/javascripts/jquery.mobile-1.3.2.min.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script>
+// 監視識別ID
+var watch_id = 0;
+var startDateTime;
+
+$(document).ready( function() {
+
+	$("#RecordLocation").bind("click", function(){
+
+		if( watch_id > 0 ) {
+			window.navigator.geolocation.clearWatch(watch_id);
+			watch_id = 0;
+			$('#RecordLocation').prop('value','記録開始').button("refresh");
+			
+			startDateTime = null;
+			$('#elapsedTime').html('経過時間ミリ秒:----')
+			
+		}else{
+			watch_id = navigator.geolocation.watchPosition(successCallback,errorCallback);
+			$('#RecordLocation').prop('value','記録停止').button("refresh");
+			
+			startDateTime = $.now();
+			$('#elapsedTime').html('経過時間ミリ秒:'+ ($.now() - startDateTime))
+			
+		}
+	})
+	
+	initLocation();
+});
+
+function successCallback(event) {
+	// 緯度
+	var latitude = event.coords.latitude;
+	$('#latitude').html('<span>緯度:'+latitude+'</span>');
+	// 経度
+	var longitude = event.coords.longitude;
+	$('#longitude').html('<span>経度:'+longitude+'</span>');
+	// 精度
+	var accuracy = event.coords.accuracy;
+	$('#accuracy').html('<span>誤差:'+accuracy+'</span>');
+
+	// タイムスタンプ
+	var date = event.timestamp;
+	if( typeof(date) == "number" ) {
+		date = new Date(date);
+	}
+	if( typeof(date) == "number" ) {
+		date = new Date(date);
+	}
+	$('#timestamp').html( date.toString());
+	
+	var latlng = new google.maps.LatLng(latitude, longitude);
+	var options = {
+			zoom: 15,
+			center: latlng,
+			mapTypeId: google.maps.MapTypeId.ROADMAP
+	};
+	var map = new google.maps.Map($("#map").get(0), options);
+	var marker = new google.maps.Marker({
+		position: latlng,
+		map: map,
+		title: '現在地'
+	});
+	
+	$('#elapsedTime').html('経過時間ミリ秒:'+ ($.now() - startDateTime ))
+}
+
+
+function initLocation(){
+
+	//ユーザーの現在の位置情報を取得
+	navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+}
+
+
+//***** 位置情報が取得できない場合 *****/
+function errorCallback(error) {
+	var err_msg = "";
+	switch(error.code)
+	{
+	case 1:
+		err_msg = "位置情報の利用が許可されていません";
+		break;
+	case 2:
+		err_msg = "デバイスの位置が判定できません";
+		break;
+	case 3:
+		err_msg = "タイムアウトしました";
+		break;
+	}
+	alert(err_msg);
+}
+
+</script>
+<style>
+#map {
+	width: 100%;
+height: 300px;
+border: solid 1px #ccc;
+}
+</style>
 </head>
 <body>
-        <div data-role="page">
-            <div data-role="header">
-                <h1>結果</h1>
-            </div>
-            <div data-role="content">
-              <p>あなたの現在位置</p>
-              <div id="show_result"></div>
-              <div id="map"></div>
-            </div>
-            <
-            <div data-role="footer">
-                <h4>フッター</h4>
-            </div>
-        </div>
-    </body>
+<div data-role="page">
+<div data-role="header">
+<h1>位置情報</h1>
+</div>
+<div data-role="content">
+<div id="map"></div>
+<div id="latitude"></div>
+<div id="longitude"></div>
+<div id="accuracy"></div>
+<div id="timestamp"></div>
+<div id="elapsedTime">経過時間：----</div>
+<input id="RecordLocation" type="Button" Value="記録開始"/>
+
+</div>
+
+<div data-role="footer">
+<h4>フッター</h4>
+</div>
+</div>
+</body>
 </html>
