リンクをボタン風に

--- a/views/geoLocation/index.ejs
+++ b/views/geoLocation/index.ejs
@@ -113,7 +113,7 @@ border: solid 1px #ccc;
 </head>
 <body>
 <div data-role="page">
-<div data-role="header">
+<div data-role="header" data-position="fixed">
 <h1>位置情報</h1>
 </div>
 <div data-role="content">
@@ -127,8 +127,8 @@ border: solid 1px #ccc;
 
 </div>
 
-<div data-role="footer">
-<h4>フッター</h4>
+<div data-role="footer" data-position="fixed">
+  <a href="/" data-rel="back">戻る</a>
 </div>
 </div>
 </body>
