--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,10 +15,9 @@
                 <h1>タクシーどうだった？</h1>
             </div>
             <div data-role="content">
-                <ul>
-                    <li><a href="/taxi/add" data-transition="slide">評価する</a></li>
-                    <li><a href="/taxi" data-transition="slide">見る</a></li>
-                </ul>
+                <a href="/taxi/add" data-role="button" data-transition="slide">評価する</a>
+                <a href="/taxi" data-role="button" data-transition="slide">見る</a>
+                <a href="/geoLocation" data-role="button" data-transition="slide">地図を見る</a>
             </div>
             <div data-role="footer" data-position="fixed">
                 <h4>フッター</h4>
