--- a/views/taxis/add.ejs
+++ b/views/taxis/add.ejs
@@ -93,7 +93,7 @@
                 </form>
             </div>
             <div data-role="footer" data-position="fixed">
-                <a href="/" data-role="button">戻る</a>
+                <a href="/" data-rel="back">戻る</a>
             </div>
         </div>
     </body>
