--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -8,6 +8,80 @@
         <link rel='stylesheet' href='/stylesheets/jquery.mobile-1.3.2.min.css' />
         <script src="/javascripts/jquery-1.10.2.min.js"></script>
         <script src="/javascripts/jquery.mobile-1.3.2.min.js"></script>
+        <script src="/javascripts/google-chart.js"></script>
+        <script type="text/javascript">
+            // Load the Visualization API and the piechart package.
+            google.load('visualization', '1.0', {
+                'packages' : ['corechart']
+            });
+
+            // Set a callback to run when the Google Visualization API is loaded.
+            google.setOnLoadCallback(drawChart);
+
+            // Callback that creates and populates a data table,
+            // instantiates the pie chart, passes in the data and
+            // draws it.
+            function drawChart() {
+                <%
+                var black_cnt = 0;
+                var white_cnt = 0;
+                var yellow_cnt = 0;
+                var orange_cnt = 0;
+                var etc_cnt = 0;
+                var black = ['黒', 0];
+                var white = ['白', 0];
+                var yellow = ['黄色', 0];
+                var orange = ['オレンジ', 0];
+                var etc = ['その他', 0];
+                taxis.forEach(function(doc){
+                if(doc.rating == '5'){
+                  if(doc.color == 'black' ){black[1]++;}
+                  else if(doc.color == 'white'){white[1]++;}
+                  else if(doc.color == 'yellow'){yellow[1]++;}
+                  else if(doc.color == 'orange'){orange[1]++;}
+                  else if(doc.color == 'etc'){etc[1]++;}
+                  }
+                })
+                %>
+
+                // Create the data table.
+                var data = new google.visualization.DataTable();
+                data.addColumn('string', 'Topping');
+                data.addColumn('number', 'Slices');
+                data.addRows([
+                ['<%= black[0] %>', <%= black[1] %>],
+                ['<%= white[0] %>', <%= white[1] %>],
+                ['<%= yellow[0] %>', <%= yellow[1] %>],
+                ['<%= orange[0] %>', <%= orange[1] %>],
+                ['<%= etc[0] %>', <%= etc[1] %>],
+                ]);
+
+                // Set chart options
+                var options = {
+                    'title' : '評価が高いタクシーの色',
+                    'width' : 400,
+                    'height' : 300,
+                    'slices' : {
+                        0 : {
+                            color : 'black'
+                        },
+                        1 : {
+                            color : 'white'
+                        },
+                        2 : {
+                            color : 'yellow'
+                        },
+                        3 : {
+                            color : 'orange'
+                        },
+                    }
+                };
+
+                // Instantiate and draw our chart, passing in some options.
+                var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+                chart.draw(data, options);
+            }
+        </script>
     </head>
     <body>
         <div data-role="page">
@@ -15,6 +89,7 @@
                 <h1>結果</h1>
             </div>
             <div data-role="content">
+                <div id="chart_div"></div>
                 <div class="ui-grid-b">
                     <div class="ui-block-a">
                         色
