評価を最新のものから表示

--- a/views/taxis/add.ejs
+++ b/views/taxis/add.ejs
@@ -57,6 +57,7 @@
                 <form action="/taxi" method="POST">
                     <input type="hidden" name="latitude" />
                     <input type="hidden" name="longitude" />
+                    <input type="hidden" name="ridingId" value="<%= new Date() %>" />
                     <legend>
                         タクシーの色：
                     </legend>
