--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -108,7 +108,9 @@
                           <%= doc.companyTypeName() %>
                       </div>
                       <div class="ui-block-d">
-                          <%= doc.rating %>
+                          <% for (var i = 0; i < doc.rating; i ++) { %>
+                              <img src="/images/stars.png" />
+                              <% } %>
                       </div>
                       <div class="ui-block-e">
                         <% if (doc.hasRoute()) { %>
