星の大きさを調整

--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -109,7 +109,7 @@
                       </div>
                       <div class="ui-block-d">
                           <% for (var i = 0; i < doc.rating; i ++) { %>
-                              <img src="/images/stars.png" />
+                              <img src="/images/stars.png" style="width: 16px; height: 16px;"/>
                               <% } %>
                       </div>
                       <div class="ui-block-e">
