--- a/views/taxis/add.ejs
+++ b/views/taxis/add.ejs
@@ -8,56 +8,17 @@
         <link rel='stylesheet' href='/stylesheets/jquery.mobile-1.3.2.min.css' />
         <script src="/javascripts/jquery-1.10.2.min.js"></script>
         <script src="/javascripts/jquery.mobile-1.3.2.min.js"></script>
-        <script src="/javascripts/latmeter.js"></script>
     </head>
     <body>
-        <div data-role="page">
+        <div id="taxiAdd" data-role="page">
             <div data-role="header" data-position="fixed">
                 <h1>タクシーどうだった？</h1>
             </div>
             <div data-role="content">
-                <script>
-                    $(document).ready(function() {
-                        setGeoLocation();
-                        setTimeout(setGeoLocation, 5000);
-                    });
-                    function setGeoLocation() {
-                        navigator.geolocation.getCurrentPosition(function(position) {
-                            $('input[name="latitude"]').val(position.coords.latitude);
-                            $('input[name="longitude"]').val(position.coords.longitude);
-                        }, function() {
-                        });
-                    }
-
-                    function setComment() {
-                        var rating = $('input[name=rating]').val();
-                        var ratingComment;
-                        switch(rating) {
-                            case "1":
-                                ratingComment = "二度と乗りたくない";
-                                break;
-                            case "2":
-                                ratingComment = "できれば乗りたくない";
-                                break;
-                            case "3":
-                                ratingComment = "どっちでもいい";
-                                break;
-                            case "4":
-                                ratingComment = "たまたま走ってたら乗りたい";
-                                break;
-                            case "5":
-                                ratingComment = "毎回乗りたい";
-                                break;
-                            default:
-                                ratingComment = "どっちでもいい";
-                                break;
-                        }
-                        $('#ratingComment').text(ratingComment);
-                    }
-                </script>
                 <form action="/taxi" method="POST">
                     <input type="hidden" name="latitude" />
                     <input type="hidden" name="longitude" />
+                    <input id="ridingId" type="hidden" value=""/>
                     <legend>
                         タクシーの色：
                     </legend>
@@ -95,6 +56,71 @@
             <div data-role="footer" data-position="fixed">
                 <a href="/" data-rel="back">戻る</a>
             </div>
+            
+<script>
+
+function GetQueryStringParams(sParam)
+{
+	var sPageURL = window.location.search.substring(1);
+	var sURLVariables = sPageURL.split('&');
+	for (var i = 0; i < sURLVariables.length; i++) 
+	{
+		var sParameterName = sURLVariables[i].split('=');
+		if (sParameterName[0] == sParam) 
+		{
+			return sParameterName[1];
+		}
+	}
+}
+
+$('#taxiAdd').bind('pageinit', function(){
+//setGeoLocation();
+//setTimeout(setGeoLocation, 5000);
+});
+
+$('#taxiAdd').bind('pageshow', function(){
+		if(GetQueryStringParams('ridingId')){
+			$('#ridingId').val(GetQueryStringParams('ridingId')) ;
+		}
+});
+
+            function setGeoLocation() {
+                navigator.geolocation.getCurrentPosition(function(position) {
+                    $('input[name="latitude"]').val(position.coords.latitude);
+                    $('input[name="longitude"]').val(position.coords.longitude);
+                }, function() {
+                });
+            }
+
+            function setComment() {
+                var rating = $('input[name=rating]').val();
+                var ratingComment;
+                switch(rating) {
+                    case "1":
+                        ratingComment = "二度と乗りたくない";
+                        break;
+                    case "2":
+                        ratingComment = "できれば乗りたくない";
+                        break;
+                    case "3":
+                        ratingComment = "どっちでもいい";
+                        break;
+                    case "4":
+                        ratingComment = "たまたま走ってたら乗りたい";
+                        break;
+                    case "5":
+                        ratingComment = "毎回乗りたい";
+                        break;
+                    default:
+                        ratingComment = "どっちでもいい";
+                        break;
+                }
+                
+
+
+                $('#ratingComment').text(ratingComment);
+            }
+        </script>
         </div>
     </body>
 </html>
