--- a/views/geoLocation/index.ejs
+++ b/views/geoLocation/index.ejs
@@ -33,7 +33,7 @@
 <div id="timestamp"></div>
 <div id="elapsedTime">経過時間：----</div>
 
-<input id="ridingId" type="text" value="aa"/>
+<input id="ridingId" type="hidden" value=""/>
 
 <input id="RecordLocation" type="Button" Value="タクシー乗車"/>
 
