--- a/views/taxis/add.ejs
+++ b/views/taxis/add.ejs
@@ -50,7 +50,7 @@
                     <input type="range" name="rating" value="3" min="1" max="5" step="1" onChange="setComment()">
                     <br />
                     <br />
-                    <input type="submit" data-icon="star" value="評価する" />
+                    <input type="submit" data-icon="star" value="評価する" onclick="alert($('#ridingId').val() + ' ←これをサーバに送ってほしい。')" />
                 </form>
             </div>
             <div data-role="footer" data-position="fixed">
