--- a/views/geoLocation/index.ejs
+++ b/views/geoLocation/index.ejs
@@ -154,6 +154,12 @@ function goTaxiReview(){
 	$.mobile.changePage('/taxi/add', { transition:'slide', reverse: false, reloadPage: true, data : 'ridingId=' + $('#ridingId').val() });
 }
 
+function sendGeoLocation()
+{
+	
+}
+
+
 </script>
 
 </div>
