--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -109,7 +109,7 @@
                               <% } %>
                       </div>
                       <div class="ui-block-e">
-                        <% if (doc.hasRoute()) { %>
+                        <% if (doc.hasRoute) { %>
                           <a href="/geoLocation?ridingId=<%= doc.ridingId %>">地図</a>
                           <% } %>
                       </div>
