--- a/views/geoLocation/index.ejs
+++ b/views/geoLocation/index.ejs
@@ -8,7 +8,6 @@
 <link rel='stylesheet' href='/stylesheets/jquery.mobile-1.3.2.min.css' />
 <script src="/javascripts/jquery-1.10.2.min.js"></script>
 <script src="/javascripts/jquery.mobile-1.3.2.min.js"></script>
-
 <style>
 #map {
 	width: 100%;
@@ -42,38 +41,8 @@
 <div data-role="footer" data-position="fixed">
   <a href="/" data-rel="back">戻る</a>
 </div>
-<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script> 
+<script src="http://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script> 
 <script>
-$('#geoLocationIndex').bind('pageinit',   function() {
-	$("#RecordLocation").bind("click", function(){
-		if( watch_id > 0 ) {
-			window.navigator.geolocation.clearWatch(watch_id);
-			watch_id = 0;
-			$('#RecordLocation').prop('value','タクシー乗車').button("refresh");
-			
-			startDateTime = null;
-			$('#elapsedTime').html('経過時間ミリ秒:----')
-			
-			goTaxiReview();
-			
-		}else{
-			watch_id = navigator.geolocation.watchPosition(successCallback,errorCallback, option);
-			$('#RecordLocation').prop('value','タクシー降車').button("refresh");
-			
-			startDateTime = $.now();
-			$('#elapsedTime').html('経過時間ミリ秒:'+ ($.now() - startDateTime))
-			
-			$('#ridingId').val($.now()+'@'+latitude+'@'+longitude)
-			
-			
-		}
-	});
-});
-
-$('#geoLocationIndex').bind('pageshow',   function() {
-	initLocation();
-});
-
 
 //監視識別ID
 var watch_id = 0;
@@ -82,11 +51,56 @@ var startDateTime;
 var latitude = 0;
 var longitude = 0;
 
+var ridingId = "";
+
 var option = {
 		enableHighAccuracy:true,
 		timeout:10000,
 		maximumAge:0
 };
+
+//***** 位置情報が取得できない場合 *****/
+function errorCallback(error) {
+	var err_msg = "";
+	switch(error.code)
+	{
+	case 1:
+		err_msg = "位置情報の利用が許可されていません";
+		break;
+	case 2:
+		err_msg = "デバイスの位置が判定できません";
+		break;
+	case 3:
+		err_msg = "タイムアウトしました";
+		break;
+	}
+	alert(err_msg);
+}
+
+
+
+function initLocation(){
+
+	//ユーザーの現在の位置情報を取得
+	ridingId = "";
+	navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+}
+
+
+function goTaxiReview(){
+	$.mobile.changePage('/taxi/add', { transition:'slide', reverse: false, reloadPage: true, data : 'ridingId=' + $('#ridingId').val() });
+}
+
+function sendGeoLocation()
+{
+	$.post("/geoLocation", 
+			{ latitude: latitude, 
+		      longitude: longitude,
+		      ridingId: ridingId
+			},
+			 function() {}
+			);
+}
 
 function successCallback(event) {
 	// 緯度
@@ -110,11 +124,13 @@ function successCallback(event) {
 	$('#timestamp').html( date.toString());
 	
 	var latlng = new google.maps.LatLng(latitude, longitude);
+
 	var options = {
 			zoom: 15,
 			center: latlng,
 			mapTypeId: google.maps.MapTypeId.ROADMAP
 	};
+
 	var map = new google.maps.Map($("#map").get(0), options);
 	var marker = new google.maps.Marker({
 		position: latlng,
@@ -123,42 +139,49 @@ function successCallback(event) {
 	});
 	
 	$('#elapsedTime').html('経過時間ミリ秒:'+ ($.now() - startDateTime ))
-}
-
-function initLocation(){
-
-	//ユーザーの現在の位置情報を取得
-	navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
-}
-
-
-//***** 位置情報が取得できない場合 *****/
-function errorCallback(error) {
-	var err_msg = "";
-	switch(error.code)
-	{
-	case 1:
-		err_msg = "位置情報の利用が許可されていません";
-		break;
-	case 2:
-		err_msg = "デバイスの位置が判定できません";
-		break;
-	case 3:
-		err_msg = "タイムアウトしました";
-		break;
-	}
-	alert(err_msg);
-}
-
-function goTaxiReview(){
-	$.mobile.changePage('/taxi/add', { transition:'slide', reverse: false, reloadPage: true, data : 'ridingId=' + $('#ridingId').val() });
-}
-
-function sendGeoLocation()
-{
 	
+	if(watch_id != 0){
+		sendGeoLocation();
+	}
 }
 
+$('#geoLocationIndex').bind('pageinit',   function() {
+
+	$("#RecordLocation").bind("click", function(){
+		if( watch_id > 0 ) {
+			
+			window.navigator.geolocation.clearWatch(watch_id);
+			
+			watch_id = 0;
+			
+			$('#RecordLocation').prop('value','タクシー乗車').button("refresh");
+			
+			startDateTime = null;
+			$('#elapsedTime').html('経過時間ミリ秒:----')
+			
+			goTaxiReview();
+			
+			
+		}else{
+			watch_id = navigator.geolocation.watchPosition(successCallback,errorCallback, option);
+			
+			$('#RecordLocation').prop('value','タクシー降車').button("refresh");
+			
+			startDateTime = $.now();
+			
+			$('#elapsedTime').html('経過時間ミリ秒:'+ ($.now() - startDateTime))
+			
+			ridingId = $.now()+'@'+latitude+'@'+longitude;
+			
+			$('#ridingId').val(ridingId);
+			
+		}
+	});
+});
+
+$('#geoLocationIndex').bind('pageshow',   function() {
+	initLocation();
+});
 
 </script>
 
