--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>タクシーどうだった？</title>
-        <link rel='stylesheet' href='/stylesheets/style.css' />
-        <link rel='stylesheet' href='/stylesheets/jquery.mobile-1.3.2.min.css' />
-        <script src="/javascripts/jquery-1.10.2.min.js"></script>
-        <script src="/javascripts/jquery.mobile-1.3.2.min.js"></script>
+        <% include common/_head.ejs %>
     </head>
     <body>
         <div data-role="page" data-url="/">
