--- a/views/geoLocation/index.ejs
+++ b/views/geoLocation/index.ejs
@@ -17,7 +17,7 @@
 </style>
 </head>
 <body>
-<div id="geoLocationIndex" data-role="page">
+<div id="geoLocationIndex" data-role="page" data-url="/geoLocation">
 
 <div data-role="header" data-position="fixed">
 <h1>位置情報</h1>
