--- a/views/taxis/add.ejs
+++ b/views/taxis/add.ejs
@@ -3,11 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>タクシーどうだった？</title>
-        <link rel='stylesheet' href='/stylesheets/style.css' />
-        <link rel='stylesheet' href='/stylesheets/jquery.mobile-1.3.2.min.css' />
-        <script src="/javascripts/jquery-1.10.2.min.js"></script>
-        <script src="/javascripts/jquery.mobile-1.3.2.min.js"></script>
+        <title>タクシー評価</title>
+        <% include ../common/_head.ejs %>
     </head>
     <body>
         <div id="taxiAdd" data-role="page">
@@ -19,9 +16,8 @@
                     <input type="hidden" name="latitude" />
                     <input type="hidden" name="longitude" />
                     <input type="hidden" name="ridingId" value="<%= ridingId %>"/>
-                    <legend>
-                        タクシーの色：
-                    </legend>
+
+                    <legend>タクシーの色：</legend>
                     <fieldset data-role="controlgroup"  data-mini="true" data-type="horizontal">
                         <input type="radio" name="color" id="black" value="black" checked="true">
                         <label for="black">黒</label>
