--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>タクシー評価結果</title>
         <% include ../common/_head.ejs %>
     </head>
     <body>
