--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -76,8 +76,8 @@
                     }
                 </script>
 
+                <a href="/geoLocation?ridingId=dummy" data-role="button" data-transition="slide">経路表示テスト</a>
                 <div id="chart_div" style="margin: 10px 0;"></div>
-
                 <div class="ui-grid-d">
                     <div class="ui-block-a">乗車日時</div>
                     <div class="ui-block-b">色</div>
@@ -107,6 +107,7 @@
                       </div>
                     <% }) %>
                 </div>
+                
             </div>
             <div data-role="footer" data-position="fixed">
                 <a href="/" data-rel="back">戻る</a>
