--- a/views/geoLocation/index.ejs
+++ b/views/geoLocation/index.ejs
@@ -1,47 +1,41 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>現在位置の表示</title>
-<link rel='stylesheet' href='/stylesheets/style.css' />
-<link rel='stylesheet' href='/stylesheets/jquery.mobile-1.3.2.min.css' />
-<script src="/javascripts/jquery-1.10.2.min.js"></script>
-<script src="/javascripts/jquery.mobile-1.3.2.min.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>現在位置の表示</title>
+  <% include ../common/_head.ejs %>
 </head>
 <body>
 <div id="geoLocationIndex" data-role="page" data-url="/geoLocation">
+  <div data-role="header" data-position="fixed">
+    <h1>位置情報</h1>
+  </div>
 
-<div data-role="header" data-position="fixed">
-<h1>位置情報</h1>
-</div>
+  <div data-role="content">
+    <style>
+      #map {
+        width: 100%;
+        height: 300px;
+        border: solid 1px #ccc;
+      }
+    </style>
+    <div id="map"></div>
+    <!--<div id="latitude"></div>
+    <div id="longitude"></div>
+    <div id="accuracy"></div>
+    <div id="timestamp"></div>
+    <div id="elapsedTime">経過時間：----</div>-->
 
-<div data-role="content">
-<style>
-#map {
-	width: 100%;
-height: 300px;
-border: solid 1px #ccc;
-}
-</style>
-<div id="map"></div>
-<!--<div id="latitude"></div>
-<div id="longitude"></div>
-<div id="accuracy"></div>
-<div id="timestamp"></div>
-<div id="elapsedTime">経過時間：----</div>-->
+    <input id="ridingId" type="hidden" value=""/>
+    <input id="RecordLocation" type="Button" Value="タクシー乗車"/>
+  </div>
 
-<input id="ridingId" type="hidden" value=""/>
+  <div data-role="footer" data-position="fixed">
+    <a href="/" data-rel="back">戻る</a>
+  </div>
 
-<input id="RecordLocation" type="Button" Value="タクシー乗車"/>
-
-</div>
-
-<div data-role="footer" data-position="fixed">
-<a href="/" data-rel="back">戻る</a>
-</div>
-
-<script src="http://maps.googleapis.com/maps/api/js?v=3&sensor=true&callback=initLocation"></script> 
+<script src="http://maps.googleapis.com/maps/api/js?v=3&sensor=true&callback=initLocation"></script>
 <script>
 
 //監視識別ID
