--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
             </div>
             <div data-role="content">
                 <a href="/taxi/add" data-role="button" data-transition="slide">評価する</a>
-                <a href="/taxi" data-role="button" data-transition="slide">見る</a>
+                <a href="/taxi" data-role="button" data-transition="slide">評価を見る</a>
                 <a href="/geoLocation" data-role="button" data-transition="slide">地図を見る</a>
             </div>
             <div data-role="footer" data-position="fixed">
