位置情報を日本語化

--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -76,16 +76,21 @@
                     }
                 </script>
                 <div id="chart_div" style="margin: 10px 0;"></div>
-                <div class="ui-grid-d">
-                    <div class="ui-block-a">乗車日時</div>
+                <div class="ui-grid-c">
+                    <div class="ui-block-a">日時・場所</div>
                     <div class="ui-block-b">色</div>
                     <div class="ui-block-c">タイプ</div>
                     <div class="ui-block-d">評価</div>
-                    <div class="ui-block-e">経路</div>
 
                     <% taxis.forEach(function(doc){ %>
                       <div class="ui-block-a">
                         <%= doc.createdAtString('不明') %>
+                        <% if (doc.hasRoute()) { %>
+                          <a href="/geoLocation?ridingId=<%= doc.ridingId %>" data-transition="slide">
+                            <div>乗車： <%= doc.geoLocations[0].locationName %></div>
+                            <div>降車： <%= doc.geoLocations[doc.geoLocations.length - 1].locationName %></div>
+                          </a>
+                        <% } %>
                       </div>
                       <div class="ui-block-b">
                         <%= doc.colorName() %>
@@ -97,13 +102,6 @@
                           <% for (var i = 0; i < doc.rating; i ++) { %>
                               <img src="/images/stars.png" style="width: 16px; height: 16px;"/>
                               <% } %>
-                      </div>
-                      <div class="ui-block-e">
-                        <% if (doc.hasRoute) { %>
-                          <a href="/geoLocation?ridingId=<%= doc.ridingId %>" data-transition="slide">地図</a>
-                          <% }else{ %>
-                          <a href="/geoLocation?ridingId=dummy" data-transition="slide">ダミー</a>
-                          <%  } %>
                       </div>
                     <% }) %>
                 </div>
