経路の表示

--- a/views/taxis/index.ejs
+++ b/views/taxis/index.ejs
@@ -76,11 +76,10 @@
                     }
                 </script>
                 <div id="chart_div" style="margin: 10px 0;"></div>
-                <div class="ui-grid-c">
+                <div class="ui-grid-b">
                     <div class="ui-block-a">日時・場所</div>
-                    <div class="ui-block-b">色</div>
-                    <div class="ui-block-c">タイプ</div>
-                    <div class="ui-block-d">評価</div>
+                    <div class="ui-block-b">色・タイプ</div>
+                    <div class="ui-block-c">評価</div>
 
                     <% taxis.forEach(function(doc){ %>
                       <div class="ui-block-a">
@@ -93,12 +92,9 @@
                         <% } %>
                       </div>
                       <div class="ui-block-b">
-                        <%= doc.colorName() %>
+                        <%= doc.colorName() %>　<%= doc.companyTypeName() %>
                       </div>
                       <div class="ui-block-c">
-                          <%= doc.companyTypeName() %>
-                      </div>
-                      <div class="ui-block-d">
                           <% for (var i = 0; i < doc.rating; i ++) { %>
                               <img src="/images/stars.png" style="width: 16px; height: 16px;"/>
                               <% } %>
